Fix dropdown menu z-index

--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+  z-index: 2;
 
   // Kontorsnämndens logotype
   .logo {
